# HandGestureRecognition

./: .gitignore  README.md  hello.ipynb  legacy.ipynb  pyproject.toml  visu.py
model/: best_leap_model.pth  main.ipynb
